--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -8,7 +8,8 @@
         android:paddingTop="5sp"
         android:paddingBottom="5sp"
         android:textSize="16sp"
-        android:paddingLeft="?android:attr/expandableListPreferredChildPaddingLeft"
+        android:paddingStart="?android:attr/expandableListPreferredChildPaddingLeft"
+        android:paddingEnd="?android:attr/expandableListPreferredChildPaddingLeft"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
