--- a/app/src/main/res/layout/fragment_left.xml
+++ b/app/src/main/res/layout/fragment_left.xml
@@ -3,12 +3,25 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/frameLayout"
-    android:tag="leftFrag"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:tag="leftFrag"
     tools:context=".LeftFragment">
 
     <!-- TODO: Update blank fragment layout -->
+
+    <FrameLayout
+        android:id="@+id/childView"
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.589">
+
+    </FrameLayout>
 
     <TextView
         android:id="@+id/textView2"
@@ -42,4 +55,5 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.227" />
+
 </android.support.constraint.ConstraintLayout>
