--- a/app/src/main/res/layout/fragment_child.xml
+++ b/app/src/main/res/layout/fragment_child.xml
@@ -134,7 +134,7 @@
     <TextView
         android:id="@+id/newsText"
         android:layout_width="259dp"
-        android:layout_height="match_parent"
+        android:layout_height="444dp"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
