--- a/app/src/main/res/layout/fragment_child.xml
+++ b/app/src/main/res/layout/fragment_child.xml
@@ -6,7 +6,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/LightSlateGray"
-    tools:context=".ChildFragment">
+    tools:context=".ChildFragment"
+    android:animateLayoutChanges="true">
 
     <!-- TODO: Update blank fragment layout -->
 
@@ -140,9 +141,11 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:gravity="center_vertical|center"
-        android:text="TextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextView"
+        android:text="t"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+
 </android.support.constraint.ConstraintLayout>
