--- a/app/src/main/res/layout/fragment_child.xml
+++ b/app/src/main/res/layout/fragment_child.xml
@@ -148,4 +148,27 @@
         app:layout_constraintTop_toTopOf="parent" />
 
 
+    <FrameLayout
+        android:id="@+id/transitions_container"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.352">
+
+        <TextView
+            android:id="@+id/transitionText"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:textSize="16sp" />
+    </FrameLayout>
+
 </android.support.constraint.ConstraintLayout>
+
