removed login, notification tweaks
Notifications now appear once every 10 sec instead of 1 sec.
(trying to save battery, it activates the screen)

--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -10,7 +10,7 @@
     <item
         android:id="@+id/action_logout"
         android:orderInCategory="101"
-        android:title="@string/logout_text"
+        android:title="@string/exit_text"
         app:showAsAction="never"
         />
 </menu>
