--- a/SPTesti/app/src/main/res/layout/layout_map_event.xml
+++ b/SPTesti/app/src/main/res/layout/layout_map_event.xml
@@ -31,7 +31,7 @@
         android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Refresh Map"
+        android:text="Event Overlay: ON"
         app:layout_constraintEnd_toEndOf="parent"
         tools:layout_editor_absoluteY="0dp" />
 
