overlay groundwork for the map

--- a/app/src/main/res/layout/layout_map_event.xml
+++ b/app/src/main/res/layout/layout_map_event.xml
@@ -16,6 +16,12 @@
         android:layout_height="match_parent"
         tools:context=".FragmentMapEvent"/>
 
+    <WebView
+        android:id="@+id/server"
+        android:visibility="gone"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
     <TextView
         android:id="@+id/testi"
         android:layout_width="match_parent"
@@ -26,7 +32,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:text="Refresh Map"
+        android:text="Event Overlay: ON"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
