--- a/app/src/main/res/layout-land/fragment_left.xml
+++ b/app/src/main/res/layout-land/fragment_left.xml
@@ -13,13 +13,15 @@
     <FrameLayout
         android:id="@+id/childView"
         android:layout_width="match_parent"
-        android:layout_height="200dp"
+        android:layout_height="140dp"
+        android:layout_marginTop="8dp"
+
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.603">
+        app:layout_constraintVertical_bias="0.633">
 
     </FrameLayout>
 
