--- a/css/main.css
+++ b/css/main.css
@@ -147,7 +147,19 @@ main {
 }
 
 
+#map {
+    height: 600px;  /* The height is 400 pixels /
+    width: 600px;  / The width is the width of the web page */
+   }
+#update{
 
+    margin-top: 4px; 
+    background-color: green;
+    height: 2rem;
+    color: black;
+    font-weight: bold;
+
+}
 
 
 
