--- a/app/src/main/res/layout/fragment_child.xml
+++ b/app/src/main/res/layout/fragment_child.xml
@@ -109,6 +109,7 @@
         android:layout_height="match_parent"
         android:background="@android:color/transparent"
         android:shadowColor="@android:color/transparent"
+        android:drawableEnd="@drawable/arrow_rotated"
         android:text=""
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -124,6 +125,7 @@
         android:layout_height="match_parent"
         android:background="@android:color/transparent"
         android:shadowColor="@android:color/transparent"
+        android:drawableEnd="@drawable/my_arrow"
         android:text=""
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -141,7 +143,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:gravity="center_vertical|center"
-        android:text="Loading news..."
+        android:text="@string/loading_text"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
