revisited säätö/ohje tab again

--- a/app/src/main/res/layout/fragment_right.xml
+++ b/app/src/main/res/layout/fragment_right.xml
@@ -21,7 +21,7 @@
         <ExpandableListView
             android:id="@+id/lvExp"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="match_parent" />
     </RelativeLayout>
 
 </android.support.constraint.ConstraintLayout>
