--- a/app/src/main/res/layout/row_third.xml
+++ b/app/src/main/res/layout/row_third.xml
@@ -9,7 +9,8 @@
         android:id="@+id/rowThirdText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingLeft="46dp"
+        android:paddingStart="46dp"
+        android:paddingEnd="10dp"
 
         android:textSize="16sp" />
 </LinearLayout>
