resource changes, new news arrows

--- a/app/src/main/res/layout-land/fragment_child.xml
+++ b/app/src/main/res/layout-land/fragment_child.xml
@@ -109,6 +109,7 @@
         android:background="@android:color/transparent"
         android:shadowColor="@android:color/transparent"
         style="@style/Base.Widget.AppCompat.Button.Borderless"
+        android:drawableEnd="@drawable/arrow_rotated"
         android:text=""
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -124,6 +125,7 @@
         android:background="@android:color/transparent"
         android:shadowColor="@android:color/transparent"
         style="@style/Base.Widget.AppCompat.Button.Borderless"
+        android:drawableStart="@drawable/arrow"
         android:text=""
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
