--- a/app/src/main/res/layout/fragment_child.xml
+++ b/app/src/main/res/layout/fragment_child.xml
@@ -125,7 +125,7 @@
         android:layout_height="match_parent"
         android:background="@android:color/transparent"
         android:shadowColor="@android:color/transparent"
-        android:drawableEnd="@drawable/my_arrow"
+        android:drawableStart="@drawable/arrow"
         android:text=""
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
