--- a/app/src/main/res/layout/layout_map_event.xml
+++ b/app/src/main/res/layout/layout_map_event.xml
@@ -1,46 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".FragmentMapEvent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context=".FragmentMapEvent"
+    tools:layout_editor_absoluteY="25dp">
 
     <fragment xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
         android:id="@+id/map_event"
         android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".FragmentMapEvent"/>
+        tools:context=".FragmentMapEvent" />
 
-    <WebView
-        android:id="@+id/server"
+    <ImageView
+        android:id="@+id/mapInfo"
+        android:layout_width="230dp"
+        android:layout_height="match_parent"
+        android:src="@drawable/map_description_small"
+        android:scaleType="fitXY"
         android:visibility="gone"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
-
-    <TextView
-        android:id="@+id/testi"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        app:layout_constraintLeft_toLeftOf="parent" />
 
     <Button
-        android:id="@+id/buttonOverlay"
+        android:id="@+id/buttonMapInfo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Event Map: ON"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <Button
-        android:id="@+id/buttonOverlayInfo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_marginTop="4dp"
         android:text="Info: OFF"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@id/buttonEventMapGrid"
+        app:layout_constraintLeft_toRightOf="@id/mapInfo"/>
+
+    <ImageButton
+        android:id="@+id/buttonEventMapGrid"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        app:layout_constraintLeft_toRightOf="@id/mapInfo"
+        android:src="@drawable/gridbutton"
+        android:scaleType="fitXY"/>
 
 </android.support.constraint.ConstraintLayout>
