--- a/css/main.css
+++ b/css/main.css
@@ -99,19 +99,27 @@ textarea {
 
 body {
     margin: 0px;
+
 }
+
 
 nav {
     background-color: slategray;
     width: 100%;
-    height: 2.5rem;
+    height: 5rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .navButton {
     margin-top: 0px;
+    margin-left: 0.2%;
+    margin-right: 0.2%;
     border-style: none;
     background-color: orange;
     height: 100%;
+    width: 25%;
     color: black;
     font-weight: bold;
 }
@@ -125,11 +133,31 @@ nav {
     font-weight: bold;
 }
 
+.logoutButton {
+    margin-top: 4px; 
+    border-style: none;
+    background-color: rgb(255, 0, 0);
+    height: 5rem;
+    width: 100%;
+    color: black;
+    font-weight: bold;
+}
+
+.activateFlagButton {
+    background-color: green;
+}
+
+.deactivateFlagButton {
+    background-color: red;
+}
+
+
 button {
     margin-top: 4px; 
     border-style: none;
     background-color: lightblue;
-    height: 2rem;
+    height: 5rem;
+    width: 100%;
     color: black;
     font-weight: bold;
 }
@@ -139,7 +167,9 @@ main {
 }
 
 .inputField {
-    width: 15rem;
+    width: 100%;
+    height: 2.5rem;
+    margin-bottom: 1%;
 }
 
 .loginText {
