--- a/app/src/main/res/layout/fragment_left.xml
+++ b/app/src/main/res/layout/fragment_left.xml
@@ -17,7 +17,20 @@
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.603">
+        app:layout_constraintVertical_bias="0.84">
+
+    </FrameLayout>
+
+    <FrameLayout
+        android:id="@+id/scheduleView"
+        android:layout_width="match_parent"
+        android:layout_height="98dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.435">
 
     </FrameLayout>
 
